Add link and hanging indent support

--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,8 @@
 \usepackage{multicol}
 \usepackage[margin=1in]{geometry}
 \usepackage{graphicx}
+\usepackage{hanging}
+\usepackage{hyperref}
 \graphicspath{ {./images/} }
 
 %\title{PS253 Lab Report Title}
@@ -112,7 +114,8 @@
     \section*{References}
     Insert references here, though there likely won't be many. Attempt to follow APA7 
     standardization. BibTeX may be implemented in the future to allow for automatic 
-    citation management and insertion with proper formatting.
+    citation management and insertion with proper formatting. Using the hanging 
+    package is suggested.
 
     \section*{Appendix I.}
     I will be putting the raw data from the experiments here in table form, as well as 
